# Mobu_PluginBase_Python

./: LICENSE  README.md  pyproject.toml  requirements.txt
Installer/src/: installer.iss
src/: ForPythonPlugins.py  PluginBase.py
src/Scripts/: DeepModelClone.py  Display60fpsHUD.py  DisplayShapekeys.py  MirrorCharaRotation.py  RemovePrefix.py  RemovePrefixSuffix.py  Scripts.txt  charainfo.py
src/Tools/: ActorSetHelper.py  ActorSetHelper_main.py  SwitchingCameras.py
src/Tools/ActorSetHelper_Source/: BodyIndex.py  UIfunctions.py  mainwidget.ui  ui_ActorSetHelper.py  ui_mainwidget.py
src/Tools/ActorSetHelper_src/: BodyIndex.py  QWidget.ui  QWidgetConfigure.py  QWidgetDetails.py
src/mobu_pypluginarrange/: __init__.py
